Fix main-nav margin on mobile

--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -64,6 +64,10 @@ body {
     }
 }
 
+.main-nav-link {
+    margin-left: 10px;
+}
+
 /*---------------------- Footer ---------*/
 
 footer {
